--- a/Flight_Travelers/customer/templates/customer/booking_confirmation.html
+++ b/Flight_Travelers/customer/templates/customer/booking_confirmation.html
@@ -1,6 +1,7 @@
 {% extends "customer/layout.html" %}
 {% block body %}
     <h1>Booking Confirmed!</h1>
+    <p>Hello:{{user.username}}</p>
     <p>Your booking for flight{{booking.flight_number}} has been confirmed.</p>
     <p>Departure:{{booking.departure_airport}}</p>
     <p>Booked on:{{booking.booking_date}}</p>
