Added new features

--- a/Flight_Travelers/customer/templates/customer/airline.html
+++ b/Flight_Travelers/customer/templates/customer/airline.html
@@ -83,6 +83,8 @@
             million travelers fly up to 275 destinations in 50 countries, with up to 4,000 daily departures.
             Explore destinations and travel requrements where everything you need is all in one place.
         </p>
+        <a href="{% url 'submit_ticket' %}">Support</a><br>
+        <a href="{% url 'profile_view' user.username %}">View Your Profile</a>
     </div>
     
   </div>
